Fix long text wrapping in Click to call widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1354,6 +1354,15 @@ width: 100%;
 }
 
 /* ===============================
+  CLICK TO CALL
+   =============================== */
+
+.widget.clicktocall a {
+    display: inline-block;
+}
+
+
+/* ===============================
   DIVIDER WIDGET
    =============================== */
 
